--- a/styles/styles.css
+++ b/styles/styles.css
@@ -265,7 +265,7 @@ main .section.highlight {
   font-weight: 400;
   font-style: normal;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -274,7 +274,7 @@ main .section.highlight {
   font-weight: 400;
   font-style: italic;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -283,7 +283,7 @@ main .section.highlight {
   font-weight: 700;
   font-style: normal;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -292,7 +292,7 @@ main .section.highlight {
   font-weight: 700;
   font-style: italic;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -301,7 +301,7 @@ main .section.highlight {
   font-weight: 300;
   font-style: normal;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -310,7 +310,7 @@ main .section.highlight {
   font-weight: 800;
   font-style: normal;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -319,7 +319,7 @@ main .section.highlight {
   font-weight: 900;
   font-style: normal;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -328,7 +328,7 @@ main .section.highlight {
   font-weight: 500;
   font-style: normal;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -337,7 +337,7 @@ main .section.highlight {
   font-weight: 200;
   font-style: normal;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -346,7 +346,7 @@ main .section.highlight {
   font-weight: 200;
   font-style: italic;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -355,7 +355,7 @@ main .section.highlight {
   font-weight: 300;
   font-style: normal;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -364,7 +364,7 @@ main .section.highlight {
   font-weight: 300;
   font-style: italic;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -373,7 +373,7 @@ main .section.highlight {
   font-weight: 400;
   font-style: italic;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -382,7 +382,7 @@ main .section.highlight {
   font-weight: 400;
   font-style: normal;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -391,7 +391,7 @@ main .section.highlight {
   font-weight: 500;
   font-style: italic;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -400,7 +400,7 @@ main .section.highlight {
   font-weight: 500;
   font-style: normal;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -409,7 +409,7 @@ main .section.highlight {
   font-weight: 700;
   font-style: normal;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -418,7 +418,7 @@ main .section.highlight {
   font-weight: 700;
   font-style: italic;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -427,7 +427,7 @@ main .section.highlight {
   font-weight: 800;
   font-style: italic;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -436,7 +436,7 @@ main .section.highlight {
   font-weight: 800;
   font-style: normal;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -445,7 +445,7 @@ main .section.highlight {
   font-weight: 900;
   font-style: italic;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -454,7 +454,7 @@ main .section.highlight {
   font-weight: 900;
   font-style: normal;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -463,7 +463,7 @@ main .section.highlight {
   font-weight: 400;
   font-style: normal;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -472,7 +472,7 @@ main .section.highlight {
   font-weight: 400;
   font-style: italic;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -481,7 +481,7 @@ main .section.highlight {
   font-weight: 700;
   font-style: normal;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -490,7 +490,7 @@ main .section.highlight {
   font-weight: 700;
   font-style: italic;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -499,7 +499,7 @@ main .section.highlight {
   font-weight: 300;
   font-style: normal;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -508,7 +508,7 @@ main .section.highlight {
   font-weight: 800;
   font-style: normal;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -517,7 +517,7 @@ main .section.highlight {
   font-weight: 900;
   font-style: normal;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -526,7 +526,7 @@ main .section.highlight {
   font-weight: 500;
   font-style: normal;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -535,7 +535,7 @@ main .section.highlight {
   font-weight: 200;
   font-style: normal;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -544,7 +544,7 @@ main .section.highlight {
   font-weight: 200;
   font-style: italic;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -553,7 +553,7 @@ main .section.highlight {
   font-weight: 300;
   font-style: normal;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -562,7 +562,7 @@ main .section.highlight {
   font-weight: 300;
   font-style: italic;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -571,7 +571,7 @@ main .section.highlight {
   font-weight: 400;
   font-style: italic;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -580,7 +580,7 @@ main .section.highlight {
   font-weight: 400;
   font-style: normal;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -589,7 +589,7 @@ main .section.highlight {
   font-weight: 500;
   font-style: italic;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -598,7 +598,7 @@ main .section.highlight {
   font-weight: 500;
   font-style: normal;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -607,7 +607,7 @@ main .section.highlight {
   font-weight: 700;
   font-style: normal;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -616,7 +616,7 @@ main .section.highlight {
   font-weight: 700;
   font-style: italic;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -625,7 +625,7 @@ main .section.highlight {
   font-weight: 800;
   font-style: italic;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -634,7 +634,7 @@ main .section.highlight {
   font-weight: 800;
   font-style: normal;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -643,7 +643,7 @@ main .section.highlight {
   font-weight: 900;
   font-style: italic;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -652,5 +652,5 @@ main .section.highlight {
   font-weight: 900;
   font-style: normal;
   font-stretch: normal;
-  font-display: auto;
+  font-display: swap;
 }
