--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -7,6 +7,12 @@
     padding-left: 70px;
     padding-right: 70px;
 }
+
+.columns > div > div > h2 {
+    font-family: adobe-clean,sans-serif;
+    font-weight: 700;
+}
+
 .columns img {
   width: 100%;
 }
