--- a/styles/styles.css
+++ b/styles/styles.css
@@ -73,12 +73,17 @@ header {
 
 h1, h2, h3,
 h4, h5, h6 {
-  font-family: var(--heading-font-family);
-  font-weight: 600;
-  line-height: 1.25;
-  margin-top: 1em;
-  margin-bottom: .5em;
-  scroll-margin: calc(var(--nav-height) + 1em);
+    margin-top: 0;
+    margin-bottom: .5rem;
+    font-weight: 500;
+    line-height: 1.2
+
+    /*font-family: var(--heading-font-family);*/
+  /*font-weight: 600;*/
+  /*line-height: 1.25;*/
+  /*margin-top: 1em;*/
+  /*margin-bottom: .5em;*/
+  /*scroll-margin: calc(var(--nav-height) + 1em);*/
 }
 
 h1 {
