--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -30,7 +30,7 @@
   object-fit: cover;
 }
 
-h2#featured-speakers {
+.cards-container h2 {
   font-size: 20px;
   line-height: 25px;
   font-weight: 700;
