--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -29,3 +29,90 @@
   aspect-ratio: 4 / 3;
   object-fit: cover;
 }
+
+.cards-container h2 {
+  font-size: 20px;
+  line-height: 25px;
+  font-weight: 700;
+}
+
+.featured.cards > ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 40px;
+}
+
+.featured.cards > ul > li {
+  color: #fff;
+  background-color: #2c2c2c;
+  border: 0;
+}
+
+.featured.cards .cards-card-image {
+  background: linear-gradient(125deg, #ce0d00 0%, #d30383 100%);
+  position: relative;
+}
+
+.featured.cards .cards-card-image .cards-card-featured-border-left {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 0;
+  border-top: 6px solid transparent;
+  border-bottom: 6px solid transparent;
+  border-right: 6px solid #ce0d00;
+  transform-origin: left center;
+  transform: translateY(-6px) scale(0);
+  box-sizing: border-box;
+}
+
+.featured.cards .cards-card-image .cards-card-featured-border-bottom {
+  position: absolute;
+  bottom: 6px;
+  right: -6px;
+  width: 0;
+  height: 0;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 6px solid #d30383;
+  transform-origin: center bottom;
+  transform: translateY(6px) scale(0);
+  box-sizing: border-box;
+}
+
+.featured.cards > ul > li:hover .cards-card-image .cards-card-featured-border-left {
+  transform: translateY(-6px) scale(1);
+  transition-delay: 75ms;
+}
+
+.featured.cards > ul > li:hover .cards-card-image .cards-card-featured-border-bottom {
+  transform: translateY(6px) scale(1);
+  transition-delay: 75ms;
+}
+
+.featured.cards > ul > li img {
+  aspect-ratio: 1 / 1;
+  width: 270px;
+  height: 270px;
+  transition: all 75ms ease-in-out;
+}
+
+.featured.cards > ul > li:hover img {
+  transform: translate(6px, -6px);
+}
+
+.featured.cards .cards-card-body {
+  padding: 21px 24px;
+  margin: 0;
+}
+
+.featured.cards .cards-card-body h3 {
+  font-size: 18px;
+  margin: 0 0 2px;
+}
+
+.featured.cards .cards-card-body p {
+  font-size: 14px;
+  margin: 0;
+}
