--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -23,6 +23,9 @@
 .columns > div > .columns-img-col img {
   display: block;
 }
+.pod-title {
+    font-size: 1.75rem;
+}
 
 @media (min-width: 900px) {
   .columns > div {
