Fixed font size

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -3,7 +3,7 @@
   flex-direction: column;
 }
 
-.columns > div > div > p {
+.columns-text-col {
     padding-left: 70px;
     padding-right: 70px;
 }
