--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,7 +27,7 @@
   /* body sizes */
   --body-font-size-m: 22px;
   --body-font-size-s: 18px;
-  --body-font-size-xs: 16px;
+  --body-font-size-xs: 14px;
 
   /* heading sizes */
   --heading-font-size-xxl: 48px;
@@ -235,6 +235,9 @@ main img {
 .icon svg {
   height: 100%;
   width: 100%;
+  width: 130px;
+  font-size: 16px;
+  font-weight: 400;
 }
 
 main .section {
