--- a/blocks/sponsors/sponsors.css
+++ b/blocks/sponsors/sponsors.css
@@ -1,6 +1,6 @@
 .section.sponsors-container {
     background-color: #f5f5f5;
-    padding: 144px 0px 128px 0px;
+    padding: 144px 0 128px;
 }
 
 .sponsors-wrapper {
@@ -29,7 +29,6 @@
     width: 100%;
 }
 
-
 @media(min-width: 1024px) {
     .sponsors div:nth-child(1) div {
         display: flex;
@@ -57,8 +56,8 @@
     flex-wrap: wrap;
     margin-block-start: 1em;
     margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
     padding-inline-start: 40px;
 }
 
@@ -66,6 +65,7 @@
     margin: 20 px;
     width: 150px;
 }
+
 @media(min-width: 1024px) {
     .section > div.sponsors-wrapper {
         max-width:960px;
