--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -110,9 +110,46 @@
 .featured.cards .cards-card-body h3 {
   font-size: 18px;
   margin: 0 0 2px;
+  line-height: 22px;
+  font-weight: 700;
 }
 
 .featured.cards .cards-card-body p {
   font-size: 14px;
   margin: 0;
+}
+
+.featured.cards > ul > li:has(.cards-card-body:empty) {
+  grid-column: 3/5;
+  background: transparent;
+}
+
+.featured.cards > ul > li:has(.cards-card-body:empty) img {
+  margin-left: -19px;
+  aspect-ratio: auto;
+  width: 100%;
+  height: 354px;
+}
+
+.featured.cards > ul > li:hover:has(.cards-card-body:empty) img {
+  transform: none;
+}
+
+.featured.cards > ul > li:hover:has(.cards-card-body:empty) .cards-card-image .cards-card-featured-border-bottom {
+  display: none;
+  border: 0;
+}
+
+.featured.cards > ul > li:hover:has(.cards-card-body:empty) .cards-card-image .cards-card-featured-border-left {
+  display: none;
+  border: 0;
+}
+
+.featured.cards > ul > li:has(.cards-card-body:empty) .cards-card-image {
+  background: transparent;
+}
+
+.featured.cards .cards-card-body:empty {
+  margin: 0;
+  display: none;
 }
