--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,7 +14,7 @@
   /* colors */
   --link-color: #72b7f9;
   --link-hover-color: #72b7f9;
-  --background-color: #000;
+  --background-color: #f5f5f5;
   --overlay-background-color: #eee;
   --highlight-background-color: #ccc;
   --text-color: #fff;
