--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -30,10 +30,16 @@
   object-fit: cover;
 }
 
+.cards-container {
+  background: #000;
+  color: #fff;
+}
+
 .cards-container h2 {
   font-size: 20px;
   line-height: 25px;
   font-weight: 700;
+  margin-bottom: 8px;
 }
 
 .featured.cards > ul {
@@ -116,40 +122,66 @@
 
 .featured.cards .cards-card-body p {
   font-size: 14px;
+  line-height: 21px;
   margin: 0;
 }
 
-.featured.cards > ul > li:has(.cards-card-body:empty) {
+.featured.cards > ul > li:not(:has(.cards-card-image)) {
+  grid-column: 1;
+  background: none;
+}
+
+.featured.cards > ul > li:has(.cards-card-image):has(.cards-card-body:empty) {
   grid-column: 3/5;
   background: transparent;
 }
 
-.featured.cards > ul > li:has(.cards-card-body:empty) img {
+.featured.cards > ul > li:has(.cards-card-image):has(.cards-card-body:empty) img {
   margin-left: -19px;
   aspect-ratio: auto;
-  width: 100%;
-  height: 354px;
+  width: 598px;
+  height: 357px;
+  max-width: none;
 }
 
-.featured.cards > ul > li:hover:has(.cards-card-body:empty) img {
+.featured.cards > ul > li:hover:has(.cards-card-image):has(.cards-card-body:empty) img {
   transform: none;
 }
 
-.featured.cards > ul > li:hover:has(.cards-card-body:empty) .cards-card-image .cards-card-featured-border-bottom {
+.featured.cards > ul > li:hover:has(.cards-card-image):has(.cards-card-body:empty) .cards-card-image .cards-card-featured-border-bottom {
   display: none;
   border: 0;
 }
 
-.featured.cards > ul > li:hover:has(.cards-card-body:empty) .cards-card-image .cards-card-featured-border-left {
+.featured.cards > ul > li:hover:has(.cards-card-image):has(.cards-card-body:empty) .cards-card-image .cards-card-featured-border-left {
   display: none;
   border: 0;
 }
 
-.featured.cards > ul > li:has(.cards-card-body:empty) .cards-card-image {
+.featured.cards > ul > li:has(.cards-card-image):has(.cards-card-body:empty) .cards-card-image {
   background: transparent;
 }
 
 .featured.cards .cards-card-body:empty {
   margin: 0;
   display: none;
+}
+
+.featured.cards > ul > li:not(:has(.cards-card-image)) .cards-card-body {
+  padding: 0;
+}
+
+.featured.cards > ul > li:not(:has(.cards-card-image)) h3 {
+  max-width: 300px;
+  font-size: 28px;
+  line-height: 35px;
+  font-weight: 700;
+  margin-bottom: 16px;
+}
+
+.featured.cards > ul > li:not(:has(.cards-card-image)) p {
+  font-size: 1.125rem;
+  line-height: 27px;
+  font-weight: 400;
+  margin-bottom: 15px;
 }
