style vide right

--- a/blocks/videohero/videohero.css
+++ b/blocks/videohero/videohero.css
@@ -1,3 +1,19 @@
 /* block specific CSS goes here */
 
+.videohero video {
+  position: absolute;
+  left: 45%;
+  top: 0;
+  bottom: 0;
+  right: auto;
+  height: 585px;
+  overflow: hidden;
+}
+
+
+@media (min-width: 900px) {
+  .videohero .heroContent {
+    max-width: 485px;
+  }
+}
 
