--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -131,12 +131,12 @@
   background: none;
 }
 
-.featured.cards > ul > li:has(.cards-card-image):has(.cards-card-body:empty) {
+.featured.cards > ul > li:has(.cards-card-image):has(.cards-card-body:nth-child(2):empty) {
   grid-column: 3/5;
   background: transparent;
 }
 
-.featured.cards > ul > li:has(.cards-card-image):has(.cards-card-body:empty) img {
+.featured.cards > ul > li:has(.cards-card-image):has(.cards-card-body:nth-child(2):empty) img {
   margin-left: -19px;
   aspect-ratio: auto;
   width: 598px;
@@ -144,31 +144,37 @@
   max-width: none;
 }
 
-.featured.cards > ul > li:hover:has(.cards-card-image):has(.cards-card-body:empty) img {
+.featured.cards > ul > li:hover:has(.cards-card-image):has(.cards-card-body:nth-child(2):empty) img {
   transform: none;
 }
 
-.featured.cards > ul > li:hover:has(.cards-card-image):has(.cards-card-body:empty) .cards-card-image .cards-card-featured-border-bottom {
+.featured.cards > ul > li:hover:has(.cards-card-image):has(.cards-card-body:nth-child(2):empty) .cards-card-image .cards-card-featured-border-bottom {
   display: none;
   border: 0;
 }
 
-.featured.cards > ul > li:hover:has(.cards-card-image):has(.cards-card-body:empty) .cards-card-image .cards-card-featured-border-left {
+.featured.cards > ul > li:hover:has(.cards-card-image):has(.cards-card-body:nth-child(2):empty) .cards-card-image .cards-card-featured-border-left {
   display: none;
   border: 0;
 }
 
-.featured.cards > ul > li:has(.cards-card-image):has(.cards-card-body:empty) .cards-card-image {
+.featured.cards > ul > li:has(.cards-card-image):has(.cards-card-body:nth-child(2):empty) .cards-card-image {
   background: transparent;
 }
 
-.featured.cards .cards-card-body:empty {
-  margin: 0;
+.featured.cards .cards-card-body:nth-child(3), .featured.cards .cards-card-body:nth-child(4) {
   display: none;
+  width: 0;
+  height: 0;
 }
 
 .featured.cards > ul > li:not(:has(.cards-card-image)) .cards-card-body {
   padding: 0;
+}
+
+.featured.cards .cards-card-body:nth-child(2):empty {
+  margin: 0;
+  display: none;
 }
 
 .featured.cards > ul > li:not(:has(.cards-card-image)) h3 {
@@ -184,4 +190,85 @@
   line-height: 27px;
   font-weight: 400;
   margin-bottom: 15px;
+}
+
+@media(max-width: 1024px) {
+  main .cards-container {
+    background: #2b2b2b;
+    padding: 45px 25px 45px 30px;
+  }
+
+  .cards-container h2 {
+    display: none;
+    width: 0;
+    height: 0;
+    margin: 0;
+    padding: 0;
+  }
+
+  .featured.cards > ul {
+    grid-template-columns: 1fr;
+    grid-gap: 16px;
+  }
+
+  .featured.cards > ul > li {
+    background: #000;
+  }
+
+  .featured.cards > ul > li:has(.cards-card-body:nth-child(3):empty) {
+    display: none;
+    width: 0;
+    height: 0;
+  }
+
+  .featured.cards .cards-card-image {
+    background: none;
+    float: left;
+  }
+
+  .featured.cards .cards-card-body {
+    padding: 18px 30px 18px 12px;
+  }
+
+  .featured.cards .cards-card-body h3 {
+    font-size: 18px;
+    line-height: 23px;
+    margin: 0;
+  }
+
+  .featured.cards .cards-card-body p {
+    font-size: 14px;
+    line-height: 21px;
+  }
+
+  .featured.cards > ul > li:has(.cards-card-image) .cards-card-body {
+    margin-left: 81px;
+    max-height: 81px;
+  }
+
+  .featured.cards > ul > li:not(:has(.cards-card-image)) .cards-card-body h3 {
+    font-size: 20px;
+    line-height: 25px;
+    font-weight: 800;
+  }
+
+  .featured.cards > ul > li:not(:has(.cards-card-image)) .cards-card-body p {
+    font-size: 18px;
+    line-height: 26px;
+    font-weight: 400;
+  }
+
+  .featured.cards > ul > li img {
+    width: 81px;
+    height: 81px;
+    transition: none;
+  }
+}
+
+@media(min-width: 1024px) {
+  .featured.cards > ul > li:has(.cards-card-body:nth-child(4):empty) {
+    display: none;
+    width: 0;
+    height: 0;
+  }
 }
